Revision history for Perl extension {{$dist->name}}:

{{$NEXT}}

0.11      2020-03-24 22:57:02+00:00 Europe/London
  [Enhancements]
  - Added support for OS/X, thanks to Vincent Lefèvre, RT#14034/GH#3.

0.10      2020-03-24 22:41:56+00:00 Europe/London
  - Maintenance taken over by Robert Rothenberg.

  [Enhancements]
  - Modernised code style.

  - The load average method is determined during module import.

  - Use XSLoader instead of DynaLoader.

  [Bug Fixes]
  - Fixed VERSION.

  - Removed unnecessary use of AutoLoader.

  [Incompatabilities]
  - Minimum version is v5.6.

  - Renamed `getbsdload` to `_getbsdload`.

  [Documentation]
  - Reformatted Changes to conform to CPAN::Changes::Spec.

  [Tests]
  - Modernised the test, and added a test of the load function.

  [Other]
  - Reorganised files for modern CPAN distributions.

  - Distribution is minted with Dist::Zilla.

0.03 Mon Mar 18 15:02:33 PST 2002
  - LC_NUMERIC patch from Victor Wagner
  - Added cache support to remember how we got the system load
  - Restricted getloadavg() to FreeBSD/OpenBSD for now

0.02 Sun Feb 17 23:43:26 PST 2002
  - bsd getloadavg() support with help from Dmitry Dorofeev

0.01 Wed Aug 11 15:44:55 PDT 1999
  - original version; created by h2xs 1.16