@@ -6,6 +6,8 @@ my @load = load();
 
 cmp_deeply
   \@load,
-  [ (re(qr/^\d(\.\d+)?$/)) x 3 ], 'load';
+  [ (re(qr/^\d(\.\d+)?(e[\-\+]\d+)?$/)) x 3 ], 'load';
+
+diag "@load";
 
 done_testing;
